--- a/WebApplication4/Views/Home/Index.cshtml
+++ b/WebApplication4/Views/Home/Index.cshtml
@@ -32,7 +32,7 @@
 
                         
                         <li class="tm-nav-item">
-                            <a href="" class="tm-nav-item-link tm-button">@(DateTime.Today.AddDays(-i).ToShortDateString())</a>
+                            <a href="@Url.Action("Index","Home",new { date = DateTime.Today.AddDays(-i).ToShortDateString() })" class="tm-nav-item-link tm-button">@(DateTime.Today.AddDays(-i).ToShortDateString())</a>
                         </li>
                         }
                     </ul>
