--- a/WebApplication4/css/tooplate-style.css
+++ b/WebApplication4/css/tooplate-style.css
@@ -128,14 +128,14 @@ body {
 
 .tm-button-normal:focus { outline: none; }
 .tm-bg-orange { background-color: #CC6733; color:white; }
-.tm-button-rounded { border-radius: 8px; padding-top: 12px; padding-bottom: 12px; }
+.tm-button-rounded { border-radius: 10px; padding-top: 100px;}
 .tm-button-orange { background-color: #CC6733; }
 .tm-button-orange:hover,
 .tm-button-orange:focus { background-color: #e68d5f; }
 .tm-bg-pink { background-color: #349999; }
-.tm-button-pink { background-color: #CC6698; }
+.tm-button-pink { background-color: #349999 }
 .tm-button-pink:focus,
-.tm-button-pink:hover { background-color: #ff84c0; }
+.tm-button-pink:hover { background-color: #349999; }
 .tm-button-green { background-color: #349999; }
 .tm-button-green:focus,
 .tm-button-green:hover { background-color: #43c7c7; }
@@ -158,8 +158,8 @@ body {
 	color: white;
 }
 
-.tm-button-timeline { padding-left: 35px; padding-right: 35px; padding-bottom:10px }
-.tm-timeline-item-title { font-size: 1.5rem; }
+.tm-button-timeline { padding-left: 35px; padding-right: 35px; padding-bottom:50px }
+.tm-timeline-item-title { font-size: 4.5rem; }
 .tm-timeline-date { color:white; font-size: 1.4rem; height:80px }
 
 .tm-section-title {
